# accountant

./: .gitignore  Cargo.toml  README.md  install.sh  termux_install.sh
migrations/2019-11-07-185854_create_friend_table/: down.sql  up.sql
migrations/2019-11-10-061044_create_category_table/: down.sql  up.sql
migrations/2019-11-10-131908_create_expense_table/: down.sql  up.sql
src/: cli.yml  expense_register.rs  lib.rs  main.rs  models.rs  reg.rs  sc_category.rs  sc_friend.rs  schema.rs
