[package]
name = "accountant"
version = "0.1.0"
authors = ["Sathwik Matsa <sathwikmatsa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
diesel = { version = "1.4.3", features = ["chrono", "sqlite"] }
dotenv = "0.15.0"
failure = "0.1.6"
exitfailure = "0.5.1"
clap = {version = "2.33.0", features = ["yaml"]}
